fix: video image slider spacing

--- a/styles/components/basic.css
+++ b/styles/components/basic.css
@@ -871,7 +871,7 @@
   /*background-color: black;*/
 }
 .videoMaxHeight.react-player video {
-  /*max-height: 650px;*/
+  max-height: 650px;
 }
 
 .react-player__play-icon {
